--- a/mysite/public/stylesheets/style.css
+++ b/mysite/public/stylesheets/style.css
@@ -151,7 +151,17 @@ header {
   -webkit-box-shadow: inset 0px 0px 0px 3px rgba(255,255,255,0.8), 0px 3px 0px -2px rgba(0,0,0,0.1);
   box-shadow: inset 0px 0px 0px 3px rgba(255,255,255,0.8), 0px 3px 0px -2px rgba(0,0,0,0.1);
 }
-.sidebar .widget h1 {
+.sidebar img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 200px;
+}
+img:hover {
+  -webkit-box-shadow: 0 0 2px 1px rgba(0,140,186,0.5);
+  box-shadow: 0 0 2px 1px rgba(0,140,186,0.5);
+}
+img:hover h1 {
   font-family: 'Quicksand';
   margin: 13px 10px 4px;
   padding-bottom: 10px;
@@ -159,7 +169,7 @@ header {
   border-radius: 2px 2px 0px 0px;
   margin-bottom: 10px;
 }
-.sidebar .widget p {
+img:hover p {
   font-size: 13px;
   padding: 0px 10px;
   margin-bottom: 10px;
