--- a/mysite/public/stylesheets/style.styl
+++ b/mysite/public/stylesheets/style.styl
@@ -24,6 +24,7 @@ body
   font-family 'Georgia'
   background-color background-color
   color #444
+  
 
 header
   font-family 'Quicksand'
@@ -68,6 +69,18 @@ header
     margin-left 20px
     background-color background-color
     box-shadow inset 0px 0px 0px 3px rgba(#fff, 0.8), 0px 3px 0px -2px rgba(#000, 0.1)
+
+  img 
+    border 1px solid #ddd
+    border-radius 4px
+    padding 5px
+    width: 200px
+
+
+img:hover 
+    box-shadow: 0 0 2px 1px rgba(0, 140, 186, 0.5)
+
+
 
     h1
       font-family 'Quicksand'
