--- a/mysite/views/index.jade
+++ b/mysite/views/index.jade
@@ -1,25 +1,28 @@
 extends layout
 
 block content
-  h1= title
+  
   p Welcome to #{title}
+
   p
-    | Vivamus hendrerit arcu sed erat molestie
-    | vehicula. Sed auctor neque eu tellus
-    | rhoncus ut eleifend nibh porttitor. Ut in.
+    | Hello, it seems you've just stumbled
+    | upon this page to know about me. I will
+    | take you for a ride in the journey of
+    | my life.
+
   p
-    | Donec congue lacinia dui, a porttitor
-    | lectus condimentum laoreet. Nunc eu
-    | ullamcorper orci. Quisque eget odio ac
-    | lectus vestibulum faucibus eget in metus.
-    | In pellentesque faucibus vestibulum. Nulla
-    | at nulla justo, eget luctus tortor.
+    |If you're just curious about my story,
+    |or you just wanna grab my resume, 
+    |you're in the right spot.
+
+  p 
+    input(type='image', src='/images/2.png', alt='Submit', width='100', height='100',onclick='myFunction()')
+  
+  p#demo
+    script.
+      function myFunction(){
+      document.getElementById("demo").innerHTML = "Hello World";
+      }
 block sidebar
-  .widget
-    h1 Widget
-    p
-      | Sed auctor neque eu tellus rhoncus ut
-      | eleifend nibh porttitor. Ut in nulla enim.
-    p
-      | Vivamus hendrerit arcu sed erat molestie
-      | vehicula.
+
+    img.image(src='/images/1.jpg')
