--- a/mysite/views/layout.jade
+++ b/mysite/views/layout.jade
@@ -3,9 +3,11 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel="shortcut icon" href="/images/sfsu.jpg" type="image/jpg")
   body
+  #top
    header
-      h1 My Site
+      h1 About me
     .container
       .main-content
         block content
@@ -13,3 +15,5 @@ html
         block sidebar
     footer
       p Running on node with Express, Jade and Stylus
+      a(href='https://www.facebook.com/afreen90',target='_blank' title='find us on Facebook')
+      img.image(alt="follow me on facebook" src="//login.create.net/images/icons/user/facebook_40x40.png" border=0)
