--- a/mysite/public/stylesheets/style.css
+++ b/mysite/public/stylesheets/style.css
@@ -106,7 +106,7 @@ a img {
 body {
   font-family: 'Georgia';
   color: #444;
-  background-image: url("/images/w2.jpg");
+  background-image: url("/images/w4.jpg");
   background-repeat: no;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -123,7 +123,7 @@ header {
    * Note the use of the `main-color`
    * variable and the `darken` function
    */
-  background-color: #f1c40f;
+  background-color: #fa5b4d;
   border-bottom: 1px solid #df1806;
   text-shadow: 0px -1px 0px #df1806;
 }
@@ -141,7 +141,7 @@ header li a {
   padding: 14px 16px;
 }
 header li a:hover {
-  background-color: #ff5733;
+  background-color: #f4d03f;
 }
 .container {
   width: 1000px;
@@ -163,7 +163,7 @@ header li a:hover {
   padding-top: 50px;
   padding-bottom: 50px;
   height: auto;
-  background-color: #f7dc6f;
+  background-color: #fef5e7;
   text-align: left;
   opacity: 0.8;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
@@ -235,4 +235,30 @@ footer {
   padding-top: 5px;
   font-size: 13px;
   background-color: #faf9f0;
+}
+label.required:after {
+  content: '*';
+  color: #f00;
+}
+.row {
+  margin: 5px;
+}
+#submit_button {
+  width: 109px;
+  height: 34px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #86c5fa;
+  -webkit-box-shadow: inset 0 2px rgba(255,255,255,0.29);
+  -moz-box-shadow: inset 0 2px rgba(255,255,255,0.29);
+  -webkit-box-shadow: inset 0 2px rgba(255,255,255,0.29);
+  box-shadow: inset 0 2px rgba(255,255,255,0.29);
+  border: solid 1px #77a4cb;
+  font-weight: bold;
+  color: #fff;
+  margin-left: 7px;
+}
+#submit_button:hover {
+  background-color: #0000a0;
 }
