--- a/mysite/views/layout.jade
+++ b/mysite/views/layout.jade
@@ -8,7 +8,7 @@ html
    header
       ul
       li
-        a(href='default.asp') Home
+        a(href='about.asp') About
       |   
       li
         a(href='news.asp') News
@@ -17,7 +17,7 @@ html
         a(href='contact.asp') Contact
       |   
       li
-        a(href='about.asp') About
+        a(href='home.jade') Home
       h1 Sabiha Barlaskar
 
 
