Added the frontEnd designs, like home page,header

--- a/MileStone0 Page/views/login.jade
+++ b/MileStone0 Page/views/login.jade
@@ -20,14 +20,14 @@ html
     // Load Header and Footer
     script.
       $(function() {
-      $("#header").load("/header");
+      $("#header").load("/header1");
       $("#footer").load("/footer");
       });
     | &#x9;
     | &#x9;
     style.
       #background {
-      position: fixed;
+      
       top: 0;
       left: 0;
       width: 100%;
