--- a/MileStone0 Page/views/message_details.jade
+++ b/MileStone0 Page/views/message_details.jade
@@ -1,12 +1,60 @@
 doctype html
 html
   head
+    meta(charset='utf-8')
+    | &#x9;
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    | &#x9;
+    script(src='https://code.jquery.com/jquery-3.2.1.js', integrity='sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=', crossorigin='anonymous')
+    | &#x9;
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
+    | &#x9;
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+    | &#x9;
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+    | &#x9;
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+    | &#x9;
+    link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
     |     
-    title Hello
+    // Load Header and Footer
+    script.
+      $(function() {
+      $("#header").load("/header1");
+      $("#footer").load("/footer");
+      });
+    | &#x9;
+    | &#x9;
+    style.
+      #background {
+      
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/6b/A._S._Bradford_House.JPG');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      opacity: 0.2;
+      filter:alpha(opacity=40);
+      }
+      ul {list-style:none;}
+    | &#x9;
+    | &#x9;
+    title RECycle
+  | &#x9;
   body
-   p Messages
+    // Background
+    #background
+    // Header
+    #header  
+    | &#x9;&#x9;
+    p Messages
    ul
          - each item in rows
+
+          b Message 
           li #{item.messages}
           li From: #{item.bname}
           li Email: #{item.bemail}
