--- a/MileStone0 Page/views/header1.jade
+++ b/MileStone0 Page/views/header1.jade
@@ -247,7 +247,7 @@ html
                   option(value='street') Street Name
             .flipkart-navbar-search.smallsearch.col-sm-7.col-xs-10
               .row
-              #search
+              span#search_home
                 form.search-form(role='form', method='post', action='search')
                   input.flipkart-navbar-input.col-xs-11(type='', placeholder='Search for a Property', name='')
                   button#btn-login.flipkart-navbar-button.col-xs-1(type='submit')
@@ -255,7 +255,7 @@ html
                       path(d='M11.618 9.897l4.224 4.212c.092.09.1.23.02.312l-1.464 1.46c-.08.08-.222.072-.314-.02L9.868 11.66M6.486 10.9c-2.42 0-4.38-1.955-4.38-4.367 0-2.413 1.96-4.37 4.38-4.37s4.38 1.957 4.38 4.37c0 2.412-1.96 4.368-4.38 4.368m0-10.834C2.904.066 0 2.96 0 6.533 0 10.105 2.904 13 6.486 13s6.487-2.895 6.487-6.467c0-3.572-2.905-6.467-6.487-6.467 ')
                 script.
                   var sel = document.getElementById("zip");
-                  var tex = document.getElementById("search");
+                  var tex = document.getElementById("search_home");
                   sel.addEventListener("change", function() {
                   if(sel.value == 'zipcode')
                   {
