Changed the search bar and sorted the results

--- a/MileStone0 Page/views/header1.jade
+++ b/MileStone0 Page/views/header1.jade
@@ -103,6 +103,7 @@ html
       .dropdown:hover .dropdown-menu {
       display: block;
       }
+      #zip{color: #000000;}
       .dropdown .dropdown-menu {
       position: absolute;
       top: 100%;
@@ -141,6 +142,10 @@ html
       }
       .smallnav{
       display: block;
+      }
+      #search_input{
+      color: #000000;
+      width: 300px;
       }
       .smallsearch{
       margin-left: 15px;
@@ -238,36 +243,43 @@ html
                 span.smallnav.menu(onclick='openNav()') ☰ RECycle
               h1(style='margin:0px;')
                 span.largenav RECycle
-            .col-sm-2
-              form.search-form(role='form', method='post', action='dropdownW W')
-                select(name='selectpicker',id="zip")
+            .col-sm-7.col-md-7
+             form.navbar-form(role='form', method='post',action='search')
+              select.selectpicker.form-control( name="selectpicker",id ="zip",data-style='btn-danger')
                   option(value='none') Select
+                 
                   option(value='zipcode') Zipcode
+                 
                   option(value='city') City
+                  
                   option(value='street') Street Name
-            .flipkart-navbar-search.smallsearch.col-sm-7.col-xs-10
-              .row
-              span#search_home
-                form.search-form(role='form', method='post', action='search')
-                  input.flipkart-navbar-input.col-xs-11(type='', placeholder='Search for a Property', name='')
-                  button#btn-login.flipkart-navbar-button.col-xs-1(type='submit')
-                    svg(width='15px', height='15px')
-                      path(d='M11.618 9.897l4.224 4.212c.092.09.1.23.02.312l-1.464 1.46c-.08.08-.222.072-.314-.02L9.868 11.66M6.486 10.9c-2.42 0-4.38-1.955-4.38-4.367 0-2.413 1.96-4.37 4.38-4.37s4.38 1.957 4.38 4.37c0 2.412-1.96 4.368-4.38 4.368m0-10.834C2.904.066 0 2.96 0 6.533 0 10.105 2.904 13 6.486 13s6.487-2.895 6.487-6.467c0-3.572-2.905-6.467-6.487-6.467 ')
+               span#search.search_disp
+                  input.form-control(type='text', placeholder='Search', id="search_input")
+              form(role='form',method='post',action='search')
+                 button.btn.btn-default(type='submit')
+                  i.glyphicon.glyphicon-search
                 script.
                   var sel = document.getElementById("zip");
-                  var tex = document.getElementById("search_home");
+                  var tex = document.getElementById("search_input");
                   sel.addEventListener("change", function() {
                   if(sel.value == 'zipcode')
                   {
-                  tex.innerHTML = "<input type='text' class = 'form-control' name  = 'zipcode' placeholder='Eg.94536'/>";
+                  tex.setAttribute("placeholder","Eg.94536");
+                  tex.setAttribute("name","zipcode");
                   }
                   else if(sel.value == 'city')
                   {
-                  tex.innerHTML = "<input type='text' class = 'form-control' name = 'city' placeholder='San Francisco'/>";
+                  tex.setAttribute("placeholder","San Francisco");
+                  tex.setAttribute("name","city");
+                  }
+                  else if (sel.value == 'street')
+                  {
+                  tex.setAttribute("placeholder","Euclid Ave");
+                  tex.setAttribute("name","street");
                   }
                   else
                   {
-                  tex.innerHTML = "<input type='text' class = 'form-control' name = 'street' placeholder='Euclid Ave'/>";
+                  tex.setAttribute("placeholder","Search for a Property");
                   }
                   });
       #mySidenav.sidenav
