--- a/MileStone0 Page/views/search.jade
+++ b/MileStone0 Page/views/search.jade
@@ -61,7 +61,7 @@ html
            input(type="text")
           .form-group(style='margin-top:10px')
 
-               button#btn-login.btn.btn-success(type='submit') Search 
+               button#btn-search.btn.btn-success(type='submit') Search 
 
 
       script.
