--- a/MileStone0 Page/views/homepage.jade
+++ b/MileStone0 Page/views/homepage.jade
@@ -22,7 +22,7 @@ html
    
 
       $("#FeatureHouseSection").css("background-image", "url('http://designexplora.com/wp-content/uploads/2016/07/Design-Wallpaper-And-Photo-High-Resolution-Download-Interior-Design-In-Interior-Design-Pictures.jpg')");
-      $("#FeautureDesciption").text("Team 13");
+      $("#FeautureDesciption").text("Team 13\n\n\nMembers\nJeremy Rodgers\nKachi Lau\n Sabiha Barlaskar\nRisha Shah\nParker Gray");
       
       //New Houses
       $("#NewHouse1").css("background-image", "url('https://static.pexels.com/photos/259597/pexels-photo-259597.jpeg')");
@@ -82,10 +82,10 @@ html
       }
       #FeatureDescriptionBox {
       position: absolute;
-      width: 350px;
-      height: 400px;
+      width: 150px;
+      height: 100px;
       right: 60%;
-      top: 500px;
+      top: 200px;
       }
       #FeatureDescriptionBoxOpacity {
       position: absolute;
@@ -102,6 +102,11 @@ html
       position: relative;
       color: white;
       z-index: 1;
+      }
+      #FeatureDescription{
+      text-align: center;
+      z-index: 1;
+
       }
       #BlankSection1, #BlankSection2 {
       height: 150px;
