--- a/views/signup.jade
+++ b/views/signup.jade
@@ -1,64 +1,111 @@
+doctype html
 html
   head
-    title Signup
-    |     
+    meta(charset='utf-8')
+    | &#x9;
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    | &#x9;
+    script(src='https://code.jquery.com/jquery-3.2.1.js', integrity='sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=', crossorigin='anonymous')
+    | &#x9;
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css', integrity='sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u', crossorigin='anonymous')
+    | &#x9;
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+    | &#x9;
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+    | &#x9;
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
+    | &#x9;
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+    | &#x9;
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
-    |    
+    |     
     script(src='https://code.jquery.com/jquery-2.2.0.min.js')
+    // Load Header and Footer
+    script.
+      $(function() {
+      $("#header").load("header");
+      $("#footer").load("footer");
+      });
+    | &#x9;
+    | &#x9;
+    style.
+      #background {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/6b/A._S._Bradford_House.JPG');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+      opacity: 0.2;
+      filter:alpha(opacity=40);
+      z-index: -1;
+      }
+    | &#x9;
+    | &#x9;
+    title RECycle
+  | &#x9;
   body
-    #mainform.container.col-sm-12
-      #signupbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2(style=' margin-top:50px')
-        .panel.panel-info
-          .panel-heading
-            .panel-title Sign Up
-            |                             
-            div(style='float:right; font-size: 85%; position: relative; top:-10px')
-              a#signinlink(href='/login') Sign In
-          |  
-          |                         
-          .panel-body
-            form.form-horizontal(role='form', method='post', action='/signup', onsubmit='return checkblank(this);')
-              #signupalert.alert.alert-danger(style='display:none')
-               p Error:
-               |                                     
-               span
-            
-            
-              .form-group
-               label.col-md-3.control-label(for='first_name') First Name
-               |                                     
-               .col-md-9
-                input.form-control(type='text', name='first_name', placeholder='First Name')
-            
-              .form-group
-               label.col-md-3.control-label(for='last_name') Last Name
-               |                                     
-               .col-md-9
-                input.form-control(type='text', name='last_name', placeholder='Last Name')
-             
-              .form-group                                                                   
-               label.col-md-3.control-label(for='mob_no') Mobile Number
-               |                                     
-               .col-md-9
-                input.form-control(type='number', name='mob_no', placeholder='Mobile Number')
-             
-              .form-group
-               label.col-md-3.control-label(for='user_name') User Name
-               |                                     
-               .col-md-9
-                input.form-control(type='text', name='user_name', placeholder='User Name')
-                                          
-              .form-group
-               label.col-md-3.control-label(for='password') Password
-               |                                     
-               .col-md-9
-                input.form-control(type='password', name='password', placeholder='Password')
-
-              .form-group
-              .col-md-offset-3.col-md-9
-                  button#btn-signup.btn.btn-info(type='submit')
-                   amp Sign Up
-
-
-         
+    // Background
+    #background
+    // Header
+    #header  
+    | &#x9;&#x9;
+    | &#x9;&#x9;
+    #mainform.container
+      .row
+        .col-md-12
+          #signupbox.mainbox.col-md-6.col-md-offset-3.col-sm-8.col-sm-offset-2(style=' margin-top:150px')
+            .panel.panel-info
+              .panel-heading
+                .panel-title Sign Up
+                | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                div(style='float:right; font-size: 85%; position: relative; top:-10px')
+                  a#signinlink(href='login') Sign In
+              .panel-body
+                form.form-horizontal(role='form', method='post', action='signup', onsubmit='return checkblank(this);')
+                  #signupalert.alert.alert-danger(style='display:none')
+                    p Error:
+                    |  
+                    span
+                  | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                  .form-group
+                    label.col-md-3.control-label(for='first_name') First Name
+                    | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                    .col-md-9
+                      input.form-control(type='text', pattern='[A-Za-z]{1,15}', title= 'First name must be a capital letter followed by lowercase letters',  name='first_name', placeholder='Eg. Bob', required)
+                  | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                  .form-group
+                    label.col-md-3.control-label(for='last_name') Last Name
+                    | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                    .col-md-9
+                      input.form-control(type='text', pattern='[A-Za-z]{1,15}', title= 'Last name must be a capital letter followed by lowercase letters',  name='last_name', placeholder='Eg. Smith', required)
+                  | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                  .form-group
+                    label.col-md-3.control-label(for='mob_no') Mobile Number
+                    | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                    .col-md-9
+                      input.form-control(type='number', name='mob_no', placeholder='Eg: 123-456-7890', required)
+                  | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                  .form-group
+                    label.col-md-3.control-label(for='user_name') User Name
+                    | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                    .col-md-9
+                      input.form-control(type='text', name='user_name', placeholder='User Name', required)
+                  | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                  .form-group
+                    label.col-md-3.control-label(for='password') Password
+                    | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                    .col-md-9
+                      input.form-control(type='password', name='password', placeholder='Password', required)
+                  | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                  .form-group
+                  | &#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;
+                  .col-md-offset-3.col-md-9
+                    button#btn-signup.btn.btn-info(type='submit')
+                      amp Sign Up
+    // Footer
+    #footer  
 
