removed unnecessary "most recent" listings features, some input validation work

--- a/views/add_details.jade
+++ b/views/add_details.jade
@@ -99,7 +99,7 @@ html
                label.col-md-3.control-label(for='price') Price
                |                                     
                .col-md-9
-                input.form-control(type='number', name='price', placeholder='Eg. 4000.00')
+                input.form-control(type='number', min = '0'  name='price', placeholder='Eg. 4000.00')
                
               .form-group
                label.col-md-3.control-label(for='image') Image
