--- a/views/message_details.jade
+++ b/views/message_details.jade
@@ -41,6 +41,7 @@ html
       z-index: -1;
       }
       ul {list-style:none;}
+      #message{margin-top:50%;}
     | &#x9;
     | &#x9;
     title RECycle
@@ -52,7 +53,8 @@ html
     #header  
     | &#x9;&#x9;
     p Messages
-   ul
+    #message
+    ul
          - each item in rows
 
           b Message 
