--- a/views/home_search_results.jade
+++ b/views/home_search_results.jade
@@ -33,10 +33,11 @@ html
       #map {
       height: 500px;
       width: 500px;
-      
+      margin-top: 30%;
       }
       #details{
       float: right;
+      margin-top: 30%;
 
       }    
       ul{list-style-type:none; }
