--- a/views/homepage.jade
+++ b/views/homepage.jade
@@ -22,7 +22,7 @@ html
    
 
       $("#FeatureHouseSection").css("background-image", "url('http://designexplora.com/wp-content/uploads/2016/07/Design-Wallpaper-And-Photo-High-Resolution-Download-Interior-Design-In-Interior-Design-Pictures.jpg')");
-      $("#FeautureDesciption").text("Just a demo!");
+      $("#FeautureDesciption").text("CSC648-848 Software Engineering Team 13");
       
       //New Houses
       $("#NewHouse1").css("background-image", "url('https://static.pexels.com/photos/259597/pexels-photo-259597.jpeg')");
@@ -72,7 +72,7 @@ html
       }
       #FeatureDescriptionBox {
       position: absolute;
-      width: 150px;
+      width: 300px;
       height: 100px;
       right: 60%;
       top: 200px;
